cmake_minimum_required(VERSION 3.15)
project(pintos C)

set(CMAKE_C_STANDARD 99)
include_directories(src)
include_directories(src/lib)
include_directories(src/lib/kernel)
include_directories(src/lib/user)

add_executable(pintos
        src/devices/block.c
        src/devices/block.h
        src/devices/ide.c
        src/devices/ide.h
        src/devices/input.c
        src/devices/input.h
        src/devices/intq.c
        src/devices/intq.h
        src/devices/kbd.c
        src/devices/kbd.h
        src/devices/partition.c
        src/devices/partition.h
        src/devices/pit.c
        src/devices/pit.h
        src/devices/rtc.c
        src/devices/rtc.h
        src/devices/serial.c
        src/devices/serial.h
        src/devices/shutdown.c
        src/devices/shutdown.h
        src/devices/speaker.c
        src/devices/speaker.h
        src/devices/timer.c
        src/devices/timer.h
        src/devices/vga.c
        src/devices/vga.h
        src/examples/bubsort.c
        src/examples/cat.c
        src/examples/cmp.c
        src/examples/cp.c
        src/examples/echo.c
        src/examples/halt.c
        src/examples/hex-dump.c
        src/examples/lineup.c
        src/examples/ls.c
        src/examples/Makefile
        src/examples/matmult.c
        src/examples/mcat.c
        src/examples/mcp.c
        src/examples/mkdir.c
        src/examples/pwd.c
        src/examples/recursor.c
        src/examples/rm.c
        src/examples/shell.c
        src/filesys/directory.c
        src/filesys/directory.h
        src/filesys/file.c
        src/filesys/file.h
        src/filesys/filesys.c
        src/filesys/filesys.h
        src/filesys/free-map.c
        src/filesys/free-map.h
        src/filesys/fsutil.c
        src/filesys/fsutil.h
        src/filesys/inode.c
        src/filesys/inode.h
        src/filesys/Make.vars
        src/filesys/Makefile
        src/filesys/off_t.h
        src/lib/kernel/bitmap.c
        src/lib/kernel/bitmap.h
        src/lib/kernel/console.c
        src/lib/kernel/console.h
        src/lib/kernel/debug.c
        src/lib/kernel/hash.c
        src/lib/kernel/hash.h
        src/lib/kernel/list.c
        src/lib/kernel/list.h
        src/lib/kernel/stdio.h
        src/lib/user/console.c
        src/lib/user/debug.c
        src/lib/user/entry.c
        src/lib/user/stdio.h
        src/lib/user/syscall.c
        src/lib/user/syscall.h
        src/lib/user/user.lds
        src/lib/arithmetic.c
        src/lib/ctype.h
        src/lib/debug.c
        src/lib/debug.h
        src/lib/inttypes.h
        src/lib/limits.h
        src/lib/packed.h
        src/lib/random.c
        src/lib/random.h
        src/lib/round.h
        src/lib/stdarg.h
        src/lib/stdbool.h
        src/lib/stddef.h
        src/lib/stdint.h
        src/lib/stdio.c
        src/lib/stdio.h
        src/lib/stdlib.c
        src/lib/stdlib.h
        src/lib/string.c
        src/lib/string.h
        src/lib/syscall-nr.h
        src/lib/ustar.c
        src/lib/ustar.h
        src/misc/bochs-2.2.6-big-endian.patch
        src/misc/bochs-2.2.6-build.sh
        src/misc/bochs-2.2.6-gdbstub-ENN.patch
        src/misc/bochs-2.2.6-jitter.patch
        src/misc/bochs-2.2.6-ms-extensions.patch
        src/misc/bochs-2.2.6-namespace.patch
        src/misc/bochs-2.2.6-page-fault-segv.patch
        src/misc/bochs-2.2.6-paranoia.patch
        src/misc/bochs-2.2.6-solaris-link.patch
        src/misc/bochs-2.2.6-solaris-tty.patch
        src/misc/bochs-2.2.6-triple-fault.patch
        src/misc/bochs-2.6.2-banner-stderr.patch
        src/misc/bochs-2.6.2-block-device-check.patch
        src/misc/bochs-2.6.2-build.sh
        src/misc/bochs-2.6.2-jitter-plus-segv.patch
        src/misc/bochs-2.6.2-link-tinfo.patch
        src/misc/bochs-2.6.2-xrandr-pkgconfig.patch
        src/misc/gcc-3.3.6-cross-howto
        src/misc/gdb-macros
#        src/tests/Algorithm/Diff.pm
#        src/tests/filesys/base/child-syn-read.c
#        src/tests/filesys/base/child-syn-wrt.c
#        src/tests/filesys/base/full.inc
#        src/tests/filesys/base/lg-create.c
#        src/tests/filesys/base/lg-create.ck
#        src/tests/filesys/base/lg-full.c
#        src/tests/filesys/base/lg-full.ck
#        src/tests/filesys/base/lg-random.c
#        src/tests/filesys/base/lg-random.ck
#        src/tests/filesys/base/lg-seq-block.c
#        src/tests/filesys/base/lg-seq-block.ck
#        src/tests/filesys/base/lg-seq-random.c
#        src/tests/filesys/base/lg-seq-random.ck
#        src/tests/filesys/base/Make.tests
#        src/tests/filesys/base/random.inc
#        src/tests/filesys/base/Rubric
#        src/tests/filesys/base/seq-block.inc
#        src/tests/filesys/base/seq-random.inc
#        src/tests/filesys/base/sm-create.c
#        src/tests/filesys/base/sm-create.ck
#        src/tests/filesys/base/sm-full.c
#        src/tests/filesys/base/sm-full.ck
#        src/tests/filesys/base/sm-random.c
#        src/tests/filesys/base/sm-random.ck
#        src/tests/filesys/base/sm-seq-block.c
#        src/tests/filesys/base/sm-seq-block.ck
#        src/tests/filesys/base/sm-seq-random.c
#        src/tests/filesys/base/sm-seq-random.ck
#        src/tests/filesys/base/syn-read.c
#        src/tests/filesys/base/syn-read.ck
#        src/tests/filesys/base/syn-read.h
#        src/tests/filesys/base/syn-remove.c
#        src/tests/filesys/base/syn-remove.ck
#        src/tests/filesys/base/syn-write.c
#        src/tests/filesys/base/syn-write.ck
#        src/tests/filesys/base/syn-write.h
#        src/tests/filesys/extended/child-syn-rw.c
#        src/tests/filesys/extended/dir-empty-name-persistence.ck
#        src/tests/filesys/extended/dir-empty-name.c
#        src/tests/filesys/extended/dir-empty-name.ck
#        src/tests/filesys/extended/dir-mk-tree-persistence.ck
#        src/tests/filesys/extended/dir-mk-tree.c
#        src/tests/filesys/extended/dir-mk-tree.ck
#        src/tests/filesys/extended/dir-mkdir-persistence.ck
#        src/tests/filesys/extended/dir-mkdir.c
#        src/tests/filesys/extended/dir-mkdir.ck
#        src/tests/filesys/extended/dir-open-persistence.ck
#        src/tests/filesys/extended/dir-open.c
#        src/tests/filesys/extended/dir-open.ck
#        src/tests/filesys/extended/dir-over-file-persistence.ck
#        src/tests/filesys/extended/dir-over-file.c
#        src/tests/filesys/extended/dir-over-file.ck
#        src/tests/filesys/extended/dir-rm-cwd-persistence.ck
#        src/tests/filesys/extended/dir-rm-cwd.c
#        src/tests/filesys/extended/dir-rm-cwd.ck
#        src/tests/filesys/extended/dir-rm-parent-persistence.ck
#        src/tests/filesys/extended/dir-rm-parent.c
#        src/tests/filesys/extended/dir-rm-parent.ck
#        src/tests/filesys/extended/dir-rm-root-persistence.ck
#        src/tests/filesys/extended/dir-rm-root.c
#        src/tests/filesys/extended/dir-rm-root.ck
#        src/tests/filesys/extended/dir-rm-tree-persistence.ck
#        src/tests/filesys/extended/dir-rm-tree.c
#        src/tests/filesys/extended/dir-rm-tree.ck
#        src/tests/filesys/extended/dir-rmdir-persistence.ck
#        src/tests/filesys/extended/dir-rmdir.c
#        src/tests/filesys/extended/dir-rmdir.ck
#        src/tests/filesys/extended/dir-under-file-persistence.ck
#        src/tests/filesys/extended/dir-under-file.c
#        src/tests/filesys/extended/dir-under-file.ck
#        src/tests/filesys/extended/dir-vine-persistence.ck
#        src/tests/filesys/extended/dir-vine.c
#        src/tests/filesys/extended/dir-vine.ck
#        src/tests/filesys/extended/grow-create-persistence.ck
#        src/tests/filesys/extended/grow-create.c
#        src/tests/filesys/extended/grow-create.ck
#        src/tests/filesys/extended/grow-dir-lg-persistence.ck
#        src/tests/filesys/extended/grow-dir-lg.c
#        src/tests/filesys/extended/grow-dir-lg.ck
#        src/tests/filesys/extended/grow-dir.inc
#        src/tests/filesys/extended/grow-file-size-persistence.ck
#        src/tests/filesys/extended/grow-file-size.c
#        src/tests/filesys/extended/grow-file-size.ck
#        src/tests/filesys/extended/grow-root-lg-persistence.ck
#        src/tests/filesys/extended/grow-root-lg.c
#        src/tests/filesys/extended/grow-root-lg.ck
#        src/tests/filesys/extended/grow-root-sm-persistence.ck
#        src/tests/filesys/extended/grow-root-sm.c
#        src/tests/filesys/extended/grow-root-sm.ck
#        src/tests/filesys/extended/grow-seq-lg-persistence.ck
#        src/tests/filesys/extended/grow-seq-lg.c
#        src/tests/filesys/extended/grow-seq-lg.ck
#        src/tests/filesys/extended/grow-seq-sm-persistence.ck
#        src/tests/filesys/extended/grow-seq-sm.c
#        src/tests/filesys/extended/grow-seq-sm.ck
#        src/tests/filesys/extended/grow-seq.inc
#        src/tests/filesys/extended/grow-sparse-persistence.ck
#        src/tests/filesys/extended/grow-sparse.c
#        src/tests/filesys/extended/grow-sparse.ck
#        src/tests/filesys/extended/grow-tell-persistence.ck
#        src/tests/filesys/extended/grow-tell.c
#        src/tests/filesys/extended/grow-tell.ck
#        src/tests/filesys/extended/grow-two-files-persistence.ck
#        src/tests/filesys/extended/grow-two-files.c
#        src/tests/filesys/extended/grow-two-files.ck
#        src/tests/filesys/extended/Make.tests
#        src/tests/filesys/extended/mk-tree.c
#        src/tests/filesys/extended/mk-tree.h
#        src/tests/filesys/extended/Rubric.functionality
#        src/tests/filesys/extended/Rubric.persistence
#        src/tests/filesys/extended/Rubric.robustness
#        src/tests/filesys/extended/syn-rw-persistence.ck
#        src/tests/filesys/extended/syn-rw.c
#        src/tests/filesys/extended/syn-rw.ck
#        src/tests/filesys/extended/syn-rw.h
#        src/tests/filesys/extended/tar.c
#        src/tests/filesys/create.inc
#        src/tests/filesys/Grading.no-vm
#        src/tests/filesys/Grading.with-vm
#        src/tests/filesys/seq-test.c
#        src/tests/filesys/seq-test.h
#        src/tests/internal/list.c
#        src/tests/internal/stdio.c
#        src/tests/internal/stdlib.c
#        src/tests/threads/alarm-multiple.ck
#        src/tests/threads/alarm-negative.c
#        src/tests/threads/alarm-negative.ck
#        src/tests/threads/alarm-simultaneous.c
#        src/tests/threads/alarm-simultaneous.ck
#        src/tests/threads/alarm-single.ck
#        src/tests/threads/alarm-wait.c
#        src/tests/threads/alarm-zero.c
#        src/tests/threads/alarm-zero.ck
#        src/tests/threads/alarm.pm
#        src/tests/threads/Grading
#        src/tests/threads/Make.tests
#        src/tests/threads/narrow-bridge.c
#        src/tests/threads/narrow-bridge.ck
#        src/tests/threads/producer-consumer.c
#        src/tests/threads/producer-consumer.ck
#        src/tests/threads/Rubric.alarm
#        src/tests/threads/Rubric.synchronization
#        src/tests/threads/tests.c
#        src/tests/threads/tests.h
#        src/tests/userprog/no-vm/Make.tests
#        src/tests/userprog/no-vm/multi-oom.c
#        src/tests/userprog/no-vm/multi-oom.ck
#        src/tests/userprog/no-vm/Rubric
#        src/tests/userprog/args-dbl-space.ck
#        src/tests/userprog/args-many.ck
#        src/tests/userprog/args-multiple.ck
#        src/tests/userprog/args-none.ck
#        src/tests/userprog/args-single.ck
#        src/tests/userprog/args.c
#        src/tests/userprog/bad-jump.c
#        src/tests/userprog/bad-jump.ck
#        src/tests/userprog/bad-jump2.c
#        src/tests/userprog/bad-jump2.ck
#        src/tests/userprog/bad-read.c
#        src/tests/userprog/bad-read.ck
#        src/tests/userprog/bad-read2.c
#        src/tests/userprog/bad-read2.ck
#        src/tests/userprog/bad-write.c
#        src/tests/userprog/bad-write.ck
#        src/tests/userprog/bad-write2.c
#        src/tests/userprog/bad-write2.ck
#        src/tests/userprog/boundary.c
#        src/tests/userprog/boundary.h
#        src/tests/userprog/child-bad.c
#        src/tests/userprog/child-close.c
#        src/tests/userprog/child-rox.c
#        src/tests/userprog/child-simple.c
#        src/tests/userprog/close-bad-fd.c
#        src/tests/userprog/close-bad-fd.ck
#        src/tests/userprog/close-normal.c
#        src/tests/userprog/close-normal.ck
#        src/tests/userprog/close-stdin.c
#        src/tests/userprog/close-stdin.ck
#        src/tests/userprog/close-stdout.c
#        src/tests/userprog/close-stdout.ck
#        src/tests/userprog/close-twice.c
#        src/tests/userprog/close-twice.ck
#        src/tests/userprog/create-bad-ptr.c
#        src/tests/userprog/create-bad-ptr.ck
#        src/tests/userprog/create-bound.c
#        src/tests/userprog/create-bound.ck
#        src/tests/userprog/create-empty.c
#        src/tests/userprog/create-empty.ck
#        src/tests/userprog/create-exists.c
#        src/tests/userprog/create-exists.ck
#        src/tests/userprog/create-long.c
#        src/tests/userprog/create-long.ck
#        src/tests/userprog/create-normal.c
#        src/tests/userprog/create-normal.ck
#        src/tests/userprog/create-null.c
#        src/tests/userprog/create-null.ck
#        src/tests/userprog/exec-arg.c
#        src/tests/userprog/exec-arg.ck
#        src/tests/userprog/exec-bad-ptr.c
#        src/tests/userprog/exec-bad-ptr.ck
#        src/tests/userprog/exec-bound-2.c
#        src/tests/userprog/exec-bound-2.ck
#        src/tests/userprog/exec-bound-3.c
#        src/tests/userprog/exec-bound-3.ck
#        src/tests/userprog/exec-bound.c
#        src/tests/userprog/exec-bound.ck
#        src/tests/userprog/exec-missing.c
#        src/tests/userprog/exec-missing.ck
#        src/tests/userprog/exec-multiple.c
#        src/tests/userprog/exec-multiple.ck
#        src/tests/userprog/exec-once.c
#        src/tests/userprog/exec-once.ck
#        src/tests/userprog/exit.c
#        src/tests/userprog/exit.ck
#        src/tests/userprog/Grading
#        src/tests/userprog/halt.c
#        src/tests/userprog/halt.ck
#        src/tests/userprog/Make.tests
#        src/tests/userprog/multi-child-fd.c
#        src/tests/userprog/multi-child-fd.ck
#        src/tests/userprog/multi-recurse.c
#        src/tests/userprog/multi-recurse.ck
#        src/tests/userprog/null.ck
#        src/tests/userprog/open-bad-ptr.c
#        src/tests/userprog/open-bad-ptr.ck
#        src/tests/userprog/open-boundary.c
#        src/tests/userprog/open-boundary.ck
#        src/tests/userprog/open-empty.c
#        src/tests/userprog/open-empty.ck
#        src/tests/userprog/open-missing.c
#        src/tests/userprog/open-missing.ck
#        src/tests/userprog/open-normal.c
#        src/tests/userprog/open-normal.ck
#        src/tests/userprog/open-null.c
#        src/tests/userprog/open-null.ck
#        src/tests/userprog/open-twice.c
#        src/tests/userprog/open-twice.ck
#        src/tests/userprog/read-bad-fd.c
#        src/tests/userprog/read-bad-fd.ck
#        src/tests/userprog/read-bad-ptr.c
#        src/tests/userprog/read-bad-ptr.ck
#        src/tests/userprog/read-boundary.c
#        src/tests/userprog/read-boundary.ck
#        src/tests/userprog/read-normal.c
#        src/tests/userprog/read-normal.ck
#        src/tests/userprog/read-stdout.c
#        src/tests/userprog/read-stdout.ck
#        src/tests/userprog/read-zero.c
#        src/tests/userprog/read-zero.ck
#        src/tests/userprog/rox-child.c
#        src/tests/userprog/rox-child.ck
#        src/tests/userprog/rox-child.inc
#        src/tests/userprog/rox-multichild.c
#        src/tests/userprog/rox-multichild.ck
#        src/tests/userprog/rox-simple.c
#        src/tests/userprog/rox-simple.ck
#        src/tests/userprog/Rubric.functionality
#        src/tests/userprog/Rubric.robustness
#        src/tests/userprog/sample.inc
#        src/tests/userprog/sample.txt
#        src/tests/userprog/sc-bad-arg.c
#        src/tests/userprog/sc-bad-arg.ck
#        src/tests/userprog/sc-bad-sp.c
#        src/tests/userprog/sc-bad-sp.ck
#        src/tests/userprog/sc-boundary-2.c
#        src/tests/userprog/sc-boundary-2.ck
#        src/tests/userprog/sc-boundary-3.c
#        src/tests/userprog/sc-boundary-3.ck
#        src/tests/userprog/sc-boundary.c
#        src/tests/userprog/sc-boundary.ck
#        src/tests/userprog/wait-bad-pid.c
#        src/tests/userprog/wait-bad-pid.ck
#        src/tests/userprog/wait-killed.c
#        src/tests/userprog/wait-killed.ck
#        src/tests/userprog/wait-simple.c
#        src/tests/userprog/wait-simple.ck
#        src/tests/userprog/wait-twice.c
#        src/tests/userprog/wait-twice.ck
#        src/tests/userprog/write-bad-fd.c
#        src/tests/userprog/write-bad-fd.ck
#        src/tests/userprog/write-bad-ptr.c
#        src/tests/userprog/write-bad-ptr.ck
#        src/tests/userprog/write-boundary.c
#        src/tests/userprog/write-boundary.ck
#        src/tests/userprog/write-normal.c
#        src/tests/userprog/write-normal.ck
#        src/tests/userprog/write-stdin.c
#        src/tests/userprog/write-stdin.ck
#        src/tests/userprog/write-zero.c
#        src/tests/userprog/write-zero.ck
#        src/tests/vm/child-inherit.c
#        src/tests/vm/child-linear.c
#        src/tests/vm/child-mm-wrt.c
#        src/tests/vm/child-qsort-mm.c
#        src/tests/vm/child-qsort.c
#        src/tests/vm/child-sort.c
#        src/tests/vm/Grading
#        src/tests/vm/Make.tests
#        src/tests/vm/mmap-bad-fd.c
#        src/tests/vm/mmap-bad-fd.ck
#        src/tests/vm/mmap-clean.c
#        src/tests/vm/mmap-clean.ck
#        src/tests/vm/mmap-close.c
#        src/tests/vm/mmap-close.ck
#        src/tests/vm/mmap-exit.c
#        src/tests/vm/mmap-exit.ck
#        src/tests/vm/mmap-inherit.c
#        src/tests/vm/mmap-inherit.ck
#        src/tests/vm/mmap-misalign.c
#        src/tests/vm/mmap-misalign.ck
#        src/tests/vm/mmap-null.c
#        src/tests/vm/mmap-null.ck
#        src/tests/vm/mmap-over-code.c
#        src/tests/vm/mmap-over-code.ck
#        src/tests/vm/mmap-over-data.c
#        src/tests/vm/mmap-over-data.ck
#        src/tests/vm/mmap-over-stk.c
#        src/tests/vm/mmap-over-stk.ck
#        src/tests/vm/mmap-overlap.c
#        src/tests/vm/mmap-overlap.ck
#        src/tests/vm/mmap-read.c
#        src/tests/vm/mmap-read.ck
#        src/tests/vm/mmap-remove.c
#        src/tests/vm/mmap-remove.ck
#        src/tests/vm/mmap-shuffle.c
#        src/tests/vm/mmap-shuffle.ck
#        src/tests/vm/mmap-twice.c
#        src/tests/vm/mmap-twice.ck
#        src/tests/vm/mmap-unmap.c
#        src/tests/vm/mmap-unmap.ck
#        src/tests/vm/mmap-write.c
#        src/tests/vm/mmap-write.ck
#        src/tests/vm/mmap-zero.c
#        src/tests/vm/mmap-zero.ck
#        src/tests/vm/page-linear.c
#        src/tests/vm/page-linear.ck
#        src/tests/vm/page-merge-mm.c
#        src/tests/vm/page-merge-mm.ck
#        src/tests/vm/page-merge-par.c
#        src/tests/vm/page-merge-par.ck
#        src/tests/vm/page-merge-seq.c
#        src/tests/vm/page-merge-seq.ck
#        src/tests/vm/page-merge-stk.c
#        src/tests/vm/page-merge-stk.ck
#        src/tests/vm/page-parallel.c
#        src/tests/vm/page-parallel.ck
#        src/tests/vm/page-shuffle.c
#        src/tests/vm/page-shuffle.ck
#        src/tests/vm/parallel-merge.c
#        src/tests/vm/parallel-merge.h
#        src/tests/vm/process_death.pm
#        src/tests/vm/pt-bad-addr.c
#        src/tests/vm/pt-bad-addr.ck
#        src/tests/vm/pt-bad-read.c
#        src/tests/vm/pt-bad-read.ck
#        src/tests/vm/pt-big-stk-obj.c
#        src/tests/vm/pt-big-stk-obj.ck
#        src/tests/vm/pt-grow-bad.c
#        src/tests/vm/pt-grow-bad.ck
#        src/tests/vm/pt-grow-pusha.c
#        src/tests/vm/pt-grow-pusha.ck
#        src/tests/vm/pt-grow-stack.c
#        src/tests/vm/pt-grow-stack.ck
#        src/tests/vm/pt-grow-stk-sc.c
#        src/tests/vm/pt-grow-stk-sc.ck
#        src/tests/vm/pt-write-code-2.c
#        src/tests/vm/pt-write-code.c
#        src/tests/vm/pt-write-code.ck
#        src/tests/vm/pt-write-code2.ck
#        src/tests/vm/qsort.c
#        src/tests/vm/qsort.h
#        src/tests/vm/Rubric.functionality
#        src/tests/vm/Rubric.robustness
#        src/tests/vm/sample.inc
#        src/tests/vm/sample.txt
#        src/tests/arc4.c
#        src/tests/arc4.h
#        src/tests/arc4.pm
#        src/tests/cksum.c
#        src/tests/cksum.h
#        src/tests/cksum.pm
#        src/tests/lib.c
#        src/tests/lib.h
#        src/tests/lib.pm
#        src/tests/main.c
#        src/tests/main.h
#        src/tests/make-grade
#        src/tests/Make.tests
#        src/tests/random.pm
#        src/tests/tests.pm
        src/threads/flags.h
        src/threads/init.c
        src/threads/init.h
        src/threads/interrupt.c
        src/threads/interrupt.h
        src/threads/intr-stubs.h
        src/threads/intr-stubs.S
        src/threads/io.h
        src/threads/kernel.lds.S
        src/threads/loader.h
        src/threads/loader.S
        src/threads/Make.vars
        src/threads/Makefile
        src/threads/malloc.c
        src/threads/malloc.h
        src/threads/palloc.c
        src/threads/palloc.h
        src/threads/pte.h
#        src/threads/ringbuffer.c
#        src/threads/ringbuffer.h
        src/threads/start.S
        src/threads/switch.h
        src/threads/switch.S
        src/threads/synch.c
        src/threads/synch.h
        src/threads/thread.c
        src/threads/thread.h
        src/threads/vaddr.h
        src/userprog/exception.c
        src/userprog/exception.h
        src/userprog/gdt.c
        src/userprog/gdt.h
        src/userprog/Make.vars
        src/userprog/Makefile
        src/userprog/pagedir.c
        src/userprog/pagedir.h
        src/userprog/process.c
        src/userprog/process.h
        src/userprog/syscall.c
        src/userprog/syscall.h
        src/userprog/tss.c
        src/userprog/tss.h
        src/utils/backtrace
        src/utils/Makefile
        src/utils/pintos
        src/utils/pintos-gdb
        src/utils/pintos-mkdisk
        src/utils/pintos-set-cmdline
        src/utils/Pintos.pm
        src/utils/setitimer-helper.c
        src/utils/squish-pty.c
        src/utils/squish-unix.c
        src/vm/Make.vars
        src/vm/Makefile
        src/LICENSE
        src/Make.config
        src/Makefile
        src/Makefile.build
        src/Makefile.kernel
        src/Makefile.userprog
        )